fixed button style on ios

--- a/applications/primo/custom-styles.scss
+++ b/applications/primo/custom-styles.scss
@@ -12,6 +12,7 @@
   height: auto;
   text-transform: uppercase;
   border: none;
+  -webkit-appearance: none;
 
   &:focus{
     outline: #288BED auto 5px;
@@ -30,6 +31,7 @@
   height: auto;
   text-transform: uppercase;
   border: none;
+  -webkit-appearance: none;
 
   &:focus{
     outline: #288BED auto 5px;
